hphp/test/slow/hashbang_regression.php.expectf
Fatal error: This character is invalid. in %s/test/slow/hashbang_regression.php on line 3
